Added Project Page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,10 +2,11 @@
 <html>
 	{{> header}}
 	<body>
-		{{> HTMLheader}}
+		{{> HTMLheader }}
 		
 		<h1>{{pageTitle}}</h1>
-		<p>Some Text here</p>
+		
+		<p>projects would go here.</p>
 		
 		{{> footer}}
 	</body>
